# explosive-battleship-ocaml

./: README.md  dune  dune-project
_build/default/src/: game.mli
src/: board.ml  board.mli  cpu.ml  cpu.mli  dune  game.ml  game.mli  player.ml  player.mli  server.ml  template.eml.ml
static/: placement.js  script.js  single-player.js  style.css  two-player.js
tests/: dune  tests.ml
