(library
  (name board)
  (modules board)
  (libraries core)
  (preprocess (pps ppx_jane)))
(library
  (name game)
  (modules game)
  (libraries board core)
  (preprocess (pps ppx_jane)))

(executable
 (name server)
 (modules server template )
 
 (libraries dream core core_unix board game)
 (preprocess (pps lwt_ppx)))
 

 (rule
 (targets template.ml)
 (deps template.eml.ml)
 (action
  (run dream_eml %{deps} --workspace %{workspace_root})))