(library
  (name board)
  (modules board)
  (libraries core)
  (preprocess (pps ppx_jane bisect_ppx) ))


(library
  (name game)
  (modules game)
  (libraries board core yojson ppx_deriving_yojson.runtime )
  (preprocess (pps ppx_jane bisect_ppx ppx_deriving_yojson)))

(library
  (name cpu)
  (modules cpu)
  (libraries board core game)
  (preprocess (pps ppx_jane bisect_ppx)))

(library
  (name player)
  (modules player)
  (libraries core board game cpu)
  (preprocess (pps ppx_jane bisect_ppx) ))
(executable
 (name server)
 (modules server template )
 
 (libraries dream core core_unix board game cpu player  )
 (preprocess (pps lwt_ppx  ))) 

 (rule
 (targets template.ml)
 (deps template.eml.ml)
 (action
  (run dream_eml %{deps} --workspace %{workspace_root})))